--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -59,6 +64,7 @@ dependencies {
 
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
 
