--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.finalproject"
+        applicationId "com.momsfarm.finalproject"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 210308001
+        versionCode 210414001
         multiDexEnabled true
-        versionName "1.210308001"
+        versionName "1.210414001"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
