--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 18 14:02:07 WIB 2023
-sdk.dir=/Users/richardpriyanta/Library/Android/sdk
+#Tue Jul 11 22:05:33 ICT 2023
+sdk.dir=C\:\\Users\\gsuci\\AppData\\Local\\Android\\Sdk
